# snos

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TESTING.md  build.rs  compare_output.sh  error_list.txt  hints.py  out.txt  prove-list-blocks.sh  prove-seq-blocks.sh  pyproject.toml  requirements.txt  run_output_check.sh  rust-toolchain  rust-toolchain.toml  rustfmt.toml  walkthrough.md
crates/core/generate-pie/: Cargo.toml
crates/core/generate-pie/src/: api_to_blockifier_conversion.rs  block_processor.rs  cached_state.rs  commitment_utils.rs  constants.rs  context_builder.rs  conversions.rs  error.rs  lib.rs  main.rs  rpc_utils.rs  state_processing.rs  state_update.rs
crates/core/generate-pie/src/types/: block.rs  chain_config.rs  initial_reads.rs  mod.rs  os_hints.rs  pie.rs  proof.rs  transaction.rs
crates/core/generate-pie/src/utils/: block_hash.rs  commitment.rs  misc.rs  mod.rs  revert_reason.rs  rpc.rs  serialization.rs
crates/core/generate-pie/tests/: public_error_api.rs
crates/core/generate_pie/: Cargo.toml
crates/core/generate_pie/src/: main.rs
crates/rpc-client/: Cargo.toml
crates/rpc-client/src/: client.rs  constants.rs  error.rs  lib.rs  state_reader.rs  types.rs  utils.rs
crates/rpc-client/src/pathfinder/: client.rs  constants.rs  error.rs  mod.rs  proofs.rs
crates/rpc-client/src/pathfinder/types/: hash.rs  mod.rs  nodes.rs  proofs.rs  request.rs  requests.rs  storage_proof.rs
crates/rpc-client/src/state_reader/: mod.rs
crates/rpc-client/src/state_reader/tests/: mod.rs
crates/rpc-client/src/types/: hash.rs  mod.rs  nodes.rs
crates/rpc-client/src/types/proofs/: class.rs  contract.rs
crates/rpc-client/src/types/responses/: mod.rs  nodes.rs  proofs.rs
crates/rpc-replay/: Cargo.toml  Dockerfile  rpc-replay-binary.sh  rpc-replay-docker.sh  rpc-replay.yaml
crates/rpc-replay/src/: block_context.rs  lib.rs  main.rs  rpc_state_reader.rs  transactions.rs  utils.rs
crates/rpc-replay/tests/: block_with_txs.json  test_replay_block.rs
crates/starknet-os/: Cargo.toml
crates/starknet-os-types/: Cargo.toml
crates/starknet-os-types/src/: casm_contract_class.rs  chain_id.rs  class_hash_utils.rs  compiled_class.rs  contract_class.rs  deprecated_compiled_class.rs  error.rs  hash.rs  lib.rs  sierra_contract_class.rs  starknet_core_addons.rs
crates/starknet-os-types/tests/: class_from_pathfinder.json  test_serialization.rs
crates/starknet-os/src/: config.rs  error.rs  lib.rs  utils.rs
crates/starknet-os/src/cairo_types/: bigint.rs  builtins.rs  contract_class.rs  dict_access.rs  mod.rs  new_syscalls.rs  structs.rs  syscalls.rs  traits.rs  trie.rs
crates/starknet-os/src/crypto/: pedersen.rs  poseidon.rs
crates/starknet-os/src/execution/: constants.rs  deprecated_syscall_handler.rs  execute_syscalls.rs  helper.rs  mod.rs  secp_handler.rs  syscall_handler.rs  syscall_handler_utils.rs
crates/starknet-os/src/hints/: block_context.rs  bls_field.rs  bls_utils.rs  builtins.rs  compiled_class.rs  compression.rs  constants.rs  deprecated_compiled_class.rs  dict.rs  execute_transactions.rs  execution.rs  find_element.rs  kzg.rs  math.rs  mod.rs  orphaned.rs  os.rs  output.rs  patricia.rs  secp.rs  state.rs  syscalls.rs  tests.rs  transaction_hash.rs  types.rs  unimplemented.rs  vars.rs
crates/starknet-os/src/io/: classes.rs  input.rs  mod.rs  output.rs
crates/starknet-os/src/sharp/: pie.rs
crates/starknet-os/src/starknet/: starknet_storage.rs
crates/starknet-os/src/starknet/business_logic/: utils.rs
crates/starknet-os/src/starkware_utils/: serializable.rs
crates/starknet-os/src/starkware_utils/commitment_tree/: base_types.rs  binary_fact_tree.rs  errors.rs  (+5 more)
crates/starknet-os/src/storage/: composite_storage.rs  dict_storage.rs  mod.rs  storage.rs  storage_utils.rs
crates/starknet-replay/: Cargo.toml
crates/starknet-replay/src/: lib.rs  rpc_state_reader.rs  utils.rs
crates/starknet-replay/tests/: test_replay_block.rs
e2e-tests/: Cargo.toml
e2e-tests/src/: lib.rs
e2e-tests/tests/: README.md  basic_integration.rs  integration.rs
e2e-tests/tests/e2e/: error_handling.rs  mod.rs  pie_generation.rs
e2e-tests/tests/mocks/: mod.rs
e2e-tests/tests/test_data/: mod.rs
tests/: Cargo.toml  common.rs  hints.rs  hints_extensive.rs  os.rs  os_on_blocks.rs  pie.rs  sharp.rs  snos.rs
tests/common/: block_utils.rs  blocks.rs  defs.rs  deprecated_hash_utils.rs  mod.rs  os_input.json  os_output.json  output_pie.b64  prepared_os_test.rs  serde.rs  serde_utils.rs  state.rs  syscall_handler_test.py  syscalls_blocks.rs  transaction_utils.rs  utils.rs
tests/common/data/: os_input.json  output_pie.b64  storage_by_address.json
tests/contracts/: different_output.cairo  fact.cairo  hint.cairo  test_contract.cairo  test_contract2.cairo
tests/contracts/cairo1/: Scarb.toml
tests/contracts/cairo1/src/: lib.cairo  no_validate_account.cairo
tests/dependencies/: deprecated_syscalls.cairo  test_contract_interface.cairo
tests/integration/: class_hash_tests.rs  declare_txn_tests.rs  deploy_txn_tests.rs  deprecated_syscalls_tests.rs  kzg_da_tests.rs  l1_handler_txn_tests.rs  main.rs  os.rs  pie.rs  run_os.rs  segments_tests.rs  sharp.rs  syscalls_tests.rs
tests/integration/common/: block_utils.rs  blockifier_contracts.rs  contract_fixtures.rs  deprecated_hash_utils.rs  mod.rs  os_itest_contracts.rs  serde_utils.rs  state.rs  transaction_utils.rs  utils.rs
tests/integration/common/data/: os_input.json  output_pie.b64
tests/integration/contracts/os_itest_contracts/: dummy_token.cairo  test_contract.cairo  token_for_testing.cairo
tests/integration/dependencies/: initializable.cairo
tests/integration/programs/: fact.cairo
tests/programs/: bad_output.cairo  block_context.cairo  dep_exec_entry_point.cairo  different_output.cairo  exec_deploy_tx.cairo  exec_invoke_tx.cairo  format_os_output.cairo  get_block_mapping.cairo  hint.cairo  initialize_state_changes.cairo  invoke_tx.cairo  load_compiled_classes.cairo  load_deprecated_class.cairo  load_next_tx.cairo  snos_output.cairo
(+217 files in other folders)
