[workspace]
resolver = "2"

members = [
  "crates/core/generate-pie",
  "crates/rpc-client",
  "crates/rpc-replay",
  "crates/starknet-os-types",
  "e2e-tests",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.87.0"
repository = "https://github.com/keep-starknet-strange/snos/"
license-file = "LICENSE"

[workspace.dependencies]
# 0.14.2 migration baseline: pin sequencer crates to upstream main-v0.14.2 revision.
# Tracking note (checked 2026-02-24 UTC):
# - Branch: https://github.com/starkware-libs/sequencer/tree/main-v0.14.2
#   (head 3f0847b3c441d268f0c43a78bdbf069c0d42869d @ 2026-02-24T09:53:58Z)
# - Pinned commit in this workspace:
#   https://github.com/starkware-libs/sequencer/commit/da4a9f93737b1c9acfa609ec4a9caefba03cf3d1
#   (2026-02-23T15:06:11Z)
# - No upstream tag/release matching "0.14.2" found at check time.
starknet_api = { git = "https://github.com/starkware-libs/sequencer", rev = "da4a9f93737b1c9acfa609ec4a9caefba03cf3d1", features = [
  "testing",
] }
starknet_os = { git = "https://github.com/starkware-libs/sequencer", rev = "da4a9f93737b1c9acfa609ec4a9caefba03cf3d1", features = [
  "testing",
] }
blockifier = { git = "https://github.com/starkware-libs/sequencer", rev = "da4a9f93737b1c9acfa609ec4a9caefba03cf3d1", features = [
  "testing",
  "reexecution",
] }
starknet_patricia = { git = "https://github.com/starkware-libs/sequencer", rev = "da4a9f93737b1c9acfa609ec4a9caefba03cf3d1", features = [
  "testing",
] }
shared_execution_objects = { git = "https://github.com/starkware-libs/sequencer", rev = "da4a9f93737b1c9acfa609ec4a9caefba03cf3d1" }

cairo-lang-starknet = "=2.14.1-dev.3"
cairo-lang-starknet-classes = "=2.14.1-dev.3"
cairo-lang-utils = "=2.14.1-dev.3"
cairo-lang-casm = "=2.14.1-dev.3"
cairo-vm = "=3.0.1"

starknet = {package = "starknet-rust", version = "0.18.0-rc.0"}
starknet-types-core = "0.2.4"

pathfinder-class-hash = { git = "https://github.com/eqlabs/pathfinder", tag = "v0.21.3", package = "pathfinder-class-hash" }

env_logger = "0.11.6"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["arbitrary_precision"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
thiserror = "1.0.48"
anyhow = "1.0"
flate2 = "1.0.32"
num-bigint = "0.4"
once_cell = "1.20.0"
rayon = "1.10"
serde_with = "3.3.0"
starknet-core = {package = "starknet-rust-core", version = "0.17.0-rc.0"}
starknet-crypto = {package = "starknet-rust-crypto", version = "0.9.0-rc.0"}
bitvec = { version = "1.0", default-features = false, features = ["std"] }
num-traits = "0.2.19"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.46", features = ["derive"] }
futures = "0.3"

indoc = "2"
rstest = "0.18.2"

# Used for RPC Replay
aws-config = "1.1"
aws-sdk-s3 = "1.15"

starknet-os-types = { path = "crates/starknet-os-types" }
