[tool.poetry]
name = "snos"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ecdsa = "^0.18.0"
fastecdsa = "^2.3.0"
sympy = "^1.12"
cairo-lang = "0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
