[package]
name = "e2e-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
generate-pie = { path = "../crates/core/generate-pie" }
cairo-vm = { workspace = true }

# Test utilities
rstest = { workspace = true }
tokio = { workspace = true }
