[package]
name = "e2e-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cairo-vm = { workspace = true }
env_logger = { workspace = true }
generate-pie = { path = "../crates/core/generate-pie" }

# Test utilities
rstest = { workspace = true }
tokio = { workspace = true }
