[package]
name = "rpc-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[lib]
doctest = false

[features]
cairo_native = []

[dependencies]
anyhow = { workspace = true }
bitvec = { workspace = true }
blockifier = { workspace = true }
cairo-lang-starknet-classes = { workspace = true }
cairo-vm = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
num-bigint = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starknet = { workspace = true }
starknet-core = { workspace = true }
starknet-crypto = { workspace = true }
starknet-os-types = { workspace = true }
starknet-types-core = { workspace = true }
starknet_api = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
