[package]
name = "rpc-replay"
version = "1.0.0-dev"
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
blockifier = { workspace = true }
cairo-lang-starknet-classes = { workspace = true }
rpc-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starknet = { workspace = true }
starknet_api = { workspace = true }
starknet-os-types = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
