[package]
name = "starknet-os-types"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
blockifier = { workspace = true }
cairo-lang-starknet-classes = { workspace = true }
num-bigint = { workspace = true }
pathfinder-gateway-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starknet_api = { workspace = true }
starknet-types-core = { workspace = true }
starknet-core = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
rstest = { workspace = true }