[package]
name = "starknet-os"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bitvec = { workspace = true }
blockifier = { workspace = true }
cairo-lang-starknet = { workspace = true }
cairo-lang-starknet-classes = { workspace = true }
cairo-lang-casm = { workspace = true }
cairo-type-derive = { path = "../cairo-type-derive" }
cairo-vm = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
heck = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
indoc = { workspace = true }
keccak = { workspace = true } 
lazy_static = { workspace = true }
log = { workspace = true }
num-bigint = { workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
pathfinder-gateway-types = { workspace = true }
pathfinder-crypto = { workspace = true }
pathfinder-common = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
starknet_api = { workspace = true }
starknet-crypto = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
